--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ReproductorMusica
 endorsed.classpath=
 excludes=
-file.reference.jl1.0.1.jar=C:\\Users\\Familia Bricio\\Documents\\NetBeansProjects\\jlayer-master\\jl1.0.1.jar
+file.reference.jlayer-1.0.1.jar=C:\\Users\\Familia Bricio\\Documents\\NetBeansProjects\\jlayer-1.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jl1.0.1.jar}
+    ${file.reference.jlayer-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
